fix: load spectrum-two themes from jsdelivr
Use the published themes.js module from jsdelivr to avoid
404s on jspm for spectrum-two theme assets.

--- a/tools/sidekick/workfront/index.html
+++ b/tools/sidekick/workfront/index.html
@@ -13,7 +13,7 @@
     <!-- Spectrum Web Components from JSPM CDN (selected components only) -->
     <script type="module">
       import 'https://jspm.dev/@spectrum-web-components/theme/sp-theme.js';
-      import 'https://jspm.dev/@spectrum-web-components/theme/src/spectrum-two/themes.js';
+      import 'https://cdn.jsdelivr.net/npm/@spectrum-web-components/theme@1.11.0/src/spectrum-two/themes.js';
       import 'https://jspm.dev/@spectrum-web-components/button/sp-button.js';
       import 'https://jspm.dev/@spectrum-web-components/badge/sp-badge.js';
       import 'https://jspm.dev/@spectrum-web-components/divider/sp-divider.js';
