feat: add import map for Spectrum 2 theme dependencies in index.html

--- a/tools/sidekick/workfront/index.html
+++ b/tools/sidekick/workfront/index.html
@@ -10,6 +10,17 @@
     <meta name="robots" content="noindex" />
     <base href="/" />
 
+    <!-- Import map for Spectrum 2 theme dependencies -->
+    <script type="importmap">
+      {
+        "imports": {
+          "@spectrum-web-components/base": "https://cdn.jsdelivr.net/npm/@spectrum-web-components/base@1.11.0/src/index.js",
+          "@spectrum-web-components/core": "https://cdn.jsdelivr.net/npm/@spectrum-web-components/core@0.0.2/dist/index.js",
+          "lit": "https://cdn.jsdelivr.net/npm/lit@3.1.3/index.js"
+        }
+      }
+    </script>
+
     <!-- Spectrum Web Components from JSPM CDN (selected components only) -->
     <script type="module">
       import 'https://jspm.dev/@spectrum-web-components/theme/sp-theme.js';
