--- a/tools/sidekick/workfront/index.html
+++ b/tools/sidekick/workfront/index.html
@@ -16,6 +16,7 @@
         "imports": {
           "@spectrum-web-components/base": "https://cdn.jsdelivr.net/npm/@spectrum-web-components/base@1.11.0/src/index.js",
           "@spectrum-web-components/core": "https://cdn.jsdelivr.net/npm/@spectrum-web-components/core@0.0.2/dist/index.js",
+          "@spectrum-web-components/core/": "https://cdn.jsdelivr.net/npm/@spectrum-web-components/core@0.0.2/dist/",
           "lit": "https://cdn.jsdelivr.net/npm/lit@3.1.3/index.js"
         }
       }
