--- a/tools/sidekick/workfront/index.html
+++ b/tools/sidekick/workfront/index.html
@@ -19,7 +19,9 @@
           "@spectrum-web-components/core/": "https://cdn.jsdelivr.net/npm/@spectrum-web-components/core@0.0.2/dist/",
           "lit": "https://cdn.jsdelivr.net/npm/lit@3.1.3/index.js",
           "@lit/reactive-element": "https://cdn.jsdelivr.net/npm/@lit/reactive-element@2.0.4/index.js",
-          "lit-html": "https://cdn.jsdelivr.net/npm/lit-html@3.1.2/lit-html.js"
+          "lit-html": "https://cdn.jsdelivr.net/npm/lit-html@3.1.2/lit-html.js",
+          "lit-element/lit-element.js": "https://cdn.jsdelivr.net/npm/lit-element@4.0.4/lit-element.js",
+          "lit-element": "https://cdn.jsdelivr.net/npm/lit-element@4.0.4/index.js"
         }
       }
     </script>
